--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -14,6 +14,7 @@
         justify-content: center;
 
         padding: 128px 80px;
+        height: 100vh;
 
 
         img{
@@ -56,6 +57,12 @@
             align-items: center;
         }
 
+        h2 {
+            font-size: 24px;
+            margin: 64px 0 24px;
+            font-family: 'Poppins', sans-serif;
+        }
+
         form {
             input {
                 height: 50px;
@@ -71,5 +78,65 @@
                 width: 100%;
             }
         }
+        p {
+            font-size: 14px;
+            color: #737373;
+            margin-top: 16px;
+
+            a{
+                color: #e559f9;
+            }
+        }
+    }
+
+    .create-room {
+        margin-top: 64px;
+        height: 50px;
+        border-radius: 8px;
+        font-weight: 500;
+        background: #ea4335;
+        color:#fff;
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        cursor: pointer;
+        border: 0;
+
+        transition: filter 0.2s;
+
+        img {
+            margin-right: 8px;
+        }
+
+        &:hover {
+            filter: brightness(0.9);
+        }
+    }
+
+    .separator {
+        font-size: 14px;
+        color: #a8a8a8;
+
+        margin: 32px 0;
+        display: flex;
+        align-items: center;
+
+        &::before {
+            content: '';
+            flex: 1;
+            height: 1px;
+            background: #a8a8a8;
+            margin-right: 16px;
+        }
+        &::after {
+            content: '';
+            flex: 1;
+            height: 1px;
+            background: #a8a8a8;
+            margin-left: 16px;
+        }
+
     }
 }
